# Xkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  PRODUCTION.md  README.md  faiss-hardening-clean.bundle  pyproject.toml  requirements-embeddings.txt  ruff.toml  xkit-production.patch
.github/workflows/: ci.yml  compaction.yml
demo_project/.xkit/: chunks.jsonl  config.toml  index.json  metrics.json  task_history.jsonl
demo_project/.xkit/faiss/demo_project/: ids.npy  index.faiss  meta.npy  vectors.npy
demo_project/src/auth/: useAuth.ts
demo_project/src/router/: ProtectedRoute.tsx
demo_project/tests/: auth-refresh.test.ts
tests/: test_chunker.py  test_config.py  test_embeddings_integration.py  test_faiss_compaction.py  test_faiss_concurrency.py  test_faiss_query_mapping.py  test_files.py  test_production_fixes.py  test_retrieval.py  test_store.py  test_token_estimator.py
tools/: build_treesitter.py  compact_all.py
xkit/: agent_context.py  chunker.py  cli.py  config.py  embeddings.py  files.py  indexer.py  logging.py  mcp_server.py  metrics.py  observability.py  retrieval.py  store.py  token_estimator.py
xkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
